# signwriting-translation

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: lint.yaml  publish-docker.yaml  test.yaml
signwriting_translation/: bin.py  conftest.py  create_parallel_data.py  deteokenize_signwriting.py  graph_metrics.py  prepare_data.sh  server.py  spoken_language_tokenizer.py  test_server.py  tokenizer.py  train_sockeye_model.sh
signwriting_translation/old/: _spoken_language_tokenizer.py  deteokenize_signwriting.py  model_test.py
tests/: test_model.py  test_server.py
