[project]
name = "signwriting-translation"
description = "Translate from spoken to signed languages using SignWriting"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "signwriting @ git+https://github.com/sign-language-processing/signwriting",
    "sockeye @ git+https://github.com/sign-language-processing/sockeye",
    "tokenizers",
    "tiktoken",
    "huggingface-hub"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

visualization = [
    "matplotlib",
]

server = [
    "fastapi",
    "uvicorn[standard]",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "C90",  # mccabe complexity
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "PT",   # flake8-pytest-style
    "W605", # invalid escape sequence
    "BLE",  # flake8-blind-except
    "TRY",  # tryceratops
]

[tool.setuptools]
packages = [
    "signwriting_translation"
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[project.scripts]
signwriting_to_text = "signwriting_translation.bin:signwriting_to_text"
text_to_signwriting = "signwriting_translation.bin:text_to_signwriting"
